--- a/.github/workflows/publish-plugin.yml
+++ b/.github/workflows/publish-plugin.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build Windy plugin
         working-directory: knmi-windy-plugin
         run: |
-          npm ci
+          npm install
           npm run build
 
       # 4. Publish to Windy’s plugin registry
