Add Flask JSON endpoint for KNMI data

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ output_*.csv
 *.sqlite
 parks.csv
 parks_with_coords.csv
+__pycache__/
+*.pyc
+knmi_station_data/station_metrics.csv
+knmi_station_data/station_metrics.geojson
+knmi_station_data/station_metrics_map.html
+
