--- a/.github/workflows/update-qg.yml
+++ b/.github/workflows/update-qg.yml
@@ -24,7 +24,9 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
+          pip install h5netcdf
 
       - name: Generate latest QG GeoJSON
         run: |
