--- a/.github/workflows/update-qg.yml
+++ b/.github/workflows/update-qg.yml
@@ -13,7 +13,10 @@ jobs:
       GITHUB_PAT: ${{ secrets.REPO_UPLOAD_TOKEN }}
       REGIONS_FILE: data/regions_10.geojson
       OUTPUT_FILE: qg_regions.geojson
+      HISTORY_FILE: qg_regions_history.geojson
       STATIONS_FILE: stations_live.geojson
+      STATION_HISTORY_JSON: knmi_station_data/station_metrics_history.json
+      STATION_HISTORY_GEOJSON: knmi_station_data/station_metrics_history.geojson
       REPO_SLUG: artis-byte/NL-solar
     steps:
       - name: Checkout repository
@@ -44,9 +47,14 @@ jobs:
             --api-key "$KNMI_API_KEY" \
             --regions "$REGIONS_FILE" \
             --out "$OUTPUT_FILE" \
+            --history-out "$HISTORY_FILE" \
             --stations-out "$STATIONS_FILE" \
             --gh-repo "$REPO_SLUG" \
             --gh-path "$OUTPUT_FILE" \
+            --gh-history-path "$HISTORY_FILE" \
             --gh-stations-path "$STATIONS_FILE" \
+            --station-history-json "$STATION_HISTORY_JSON" \
+            --station-history-geojson "$STATION_HISTORY_GEOJSON" \
+            --gh-station-history-path "$STATION_HISTORY_GEOJSON" \
             --gh-branch main \
             --gh-token "$GITHUB_PAT"
